Fixed padding and line wrapping on mobile

--- a/less/app.less
+++ b/less/app.less
@@ -252,6 +252,7 @@ footer.jumbotron {
 
     .raised {
         margin: 20px auto;
+        margin-bottom: 25px;
         @media (min-width: @screen-sm-min) {
             margin: 50px auto;
         }
